Closed Bug 1782628 Opened 2 years ago Closed 2 years ago

`HTMLEditor::HandleInsertBRElement` may return invalid point as a suggest point to put caret

Categories

(Core :: DOM: Editor, defect, P2)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- wontfix
firefox103 --- wontfix
firefox104 --- wontfix
firefox105 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I'm looking for the STR, but I found this bug at reading the code. I'm not sure why this mistake was not detected by static code analysis.

    return CreateElementResult(
        std::move(brElement),
        EditorDOMPoint(brElement, InterlinePosition::StartOfNextLine));

brElement is cleared at the first argument, but used at creating the second argument.

Set release status flags based on info from the regressing bug 1762115

I don't see any fail caused by this with writing tests, so I think that we don't need to uplift the coming patch because the behavior is buggy in the case, anyway.

The test oddly passes without the fix in HandleInsertBRElement. I guess that
post-processing in HTMLEditor::OnEndHandlingTopLevelEditSubActionInternal()
handles Selection, and anyway the insertion point of the following
insertText is wrong. It seems that we don't need to uplift this.

Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/a674cb5f069f
Make `HTMLEditor::HandleInsertBRElement` create caret position before moving its container r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: